Import of DPARIS/Crypt-IDEA-1.01 from CPAN.
gitpan-cpan-distribution: Crypt-IDEA
gitpan-cpan-version:      1.01
gitpan-cpan-path:         DPARIS/Crypt-IDEA-1.01.tar.gz
gitpan-cpan-author:       DPARIS
gitpan-cpan-maturity:     released

--- a/IDEA.pod
+++ b/IDEA.pod
@@ -80,3 +80,6 @@ This implementation is copyright Systemics Ltd ( http://www.systemics.com/ ).
 
 The IDEA algorithm is patented in Europe and the United States
 by Ascom-Tech AG.
+
+Module altered on 22 May 1999 to allow functionality with perl -MCPAN,
+Changes by Dave Paris  (edited lib paths).
