--- a/IDEA.pod
+++ b/IDEA.pod
@@ -68,7 +68,7 @@ where $plaintext and $ciphertext should be of C<blocksize()> bytes.
 
 =head1 SEE ALSO
 
-Crypt::CBC, Crypt::DES, Crypt::Blowfish, Crypt::Rijndael
+Crypt::CBD, Crypt::DES, Crypt::Blowfish
 
 Bruce Schneier, I<Applied Cryptography>, 1995, Second Edition,
 published by John Wiley & Sons, Inc.
@@ -81,4 +81,7 @@ This implementation is copyright Systemics Ltd ( http://www.systemics.com/ ).
 The IDEA algorithm is patented in Europe and the United States
 by Ascom-Tech AG.
 
-Module now maintained by Dave Paris <amused@pobox.com>
+Module altered between 1999 and 2005  to allow added functionality with perl -MCPAN,
+Changes by Dave Paris  (edited lib paths, endian issues, new tests).
+
+Thank you to contributors for endian patches and new test suite!
