--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-This is Crypt::IDEA version 1.03, an XS-based implementation of the
+This is Crypt::IDEA version 1.05, an XS-based implementation of the
 patent-encumbered IDEA cryptography algorithm.  It's designed
-to take full advantage of Crypt::CBC when desired. 
-up to 448 bits (56 bytes) long.  This module builds on many plaforms, 
-with a little assistance.
+to take full advantage of Crypt::CBC when desired.  This module builds
+on many plaforms, with a little assistance (although this should be
+more rare now).
 
 Prerequisites
 -------------
@@ -11,7 +11,7 @@ For the full test suite to run, Crypt::CBC, version 1.22 or higher
 is required (recommended is 1.25 or higher), however this module 
 is not mandatory for standalone IDEA use.  
 
-Installing Crypt::Blowfish
+Installing Crypt::IDEA
 --------------------------
 
 nothing unusual:
@@ -26,17 +26,12 @@ Notes
 
 This module has been tested successfully against the following:
 Linux 2.0.X (x86)
-Linux 2.2.X (x86, PPC, Alpha, m68k)
+Linux 2.2.X (x86)
 Linux 2.4.X (x86)
-Mac OS X 10.4.X
+Mac OS X 10.4.X (G4)
+Solaris 8 (x86 and SPARC)
 
 Perl 5.004_01, 5.004_04, 5.005_03, 5.6.0, 5.6.1, 5.8.*
-
-To build on Mac OS X (at least 10.4.X since that's what I've
-got in front of me at the moment, the following command needs
-to be executed prior to issuing `make`:
-
-ln -s /usr/include/ppc/endian.h /usr/include/endian.h
 
 Please send other successful OS/platform combinations to:
 amused@pobox.com . Thanks.
