Import of DPARIS/Crypt-IDEA-1.07 from CPAN.
gitpan-cpan-distribution: Crypt-IDEA
gitpan-cpan-version:      1.07
gitpan-cpan-path:         DPARIS/Crypt-IDEA-1.07.tar.gz
gitpan-cpan-author:       DPARIS
gitpan-cpan-maturity:     released

--- a/changes
+++ b/changes
@@ -16,3 +16,7 @@
 	changed __sparc to __sun so the module will build
 	on solaris x86.  Thanks to Cory @ Sun for the fixup.
 
+1.07 - Wed 22 Feb 06 08:57:02 UTC
+	added  || defined(__hpux) to idea.h to cope with
+	HPUX 11.11 w/ANSI C compiler per RT ticket 17796
+
