--- a/README
+++ b/README
@@ -30,6 +30,8 @@ Linux 2.2.X (x86)
 Linux 2.4.X (x86)
 Mac OS X 10.4.X (G4)
 Solaris 8 (x86 and SPARC)
+HP-UX 11
+Win32 (mingw 3.4.5, WinXP)
 
 Perl 5.004_01, 5.004_04, 5.005_03, 5.6.0, 5.6.1, 5.8.*
 
