--- a/changes
+++ b/changes
@@ -28,3 +28,6 @@
 	Updated README - added additional known-good platforms
 	Updated COPYRIGHT
  
+1.08_001 Mon 20 Apr 2013 21:51:00 MDT
+  - Unauthorized release
+  - Fix Sv_UPGRADE bug so module will install under Perl 5.18.0.
